fix z-index of select_input

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -53,7 +53,7 @@
   background-color: var(--white-color);
   list-style: none;
   width: 160px;
-  z-index: 1;
+  z-index: 2;
   box-shadow: 0 1px 2px #e0e0e0;
   display: none;
 }
@@ -185,7 +185,7 @@
   border-radius: 2px;
   padding: 8px;
   animation: fadeIn ease-in 0.4s;
-  z-index: 1;
+  z-index: 2;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
@@ -223,7 +223,7 @@
 
 .header__notify {
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   top: 150%;
   width: 404px;
   right: 0;
@@ -523,7 +523,7 @@
   animation: fadeIn ease-in 0.3s;
   cursor: default;
   display: none;
-  z-index: 1;
+  z-index: 2;
 }
 
 .header__cart-heading {
@@ -752,7 +752,7 @@
   display: none;
   margin-top: 6px;
   animation: fadeIn ease-in 0.2s;
-  z-index: 1;
+  z-index: 2;
 }
 
 .header__search-option::after {
@@ -818,7 +818,7 @@
   box-shadow: 0 0 5px #999;
   display: none;
   overflow: hidden;
-  z-index: 1;
+  z-index: 2;
 }
 
 .header__search-history-heading {
